--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "homepage": "https://github.com/quocdaitinls/gql-apis-store",
   "scripts": {
     "build": "tsc",
-    "pub": "git add . && git commit -m \"Update\" && npm version patch && npm run build && npm publish"
+    "pub": "git add . && git commit -m \"Update\" && git push && npm version patch && npm run build && npm publish"
   },
   "keywords": [],
   "author": "Quoc Dai",
