--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "homepage": "https://github.com/quocdaitinls/gql-apis-store",
   "scripts": {
     "build": "tsc",
-    "pub": "git add . && git commit -m \"Update\" && git push && npm version patch && npm run build && npm publish"
+    "upgithub": "git add . && git commit -m \"Update\" && git push",
+    "bulish": "npm run build && npm publish",
+    "pub": "npm run upgithub && npm version major && npm run bulish"
   },
   "keywords": [],
   "author": "Quoc Dai",
