--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   "email": "quocdaitinls@gmail.com",
   "license": "ISC",
   "dependencies": {
-    "@types/react": "^17.0.39",
     "graphql-request": "^4.0.0",
-    "react": "^17.0.2",
+    "react": "^18.0.0",
     "typescript": "^4.5.5"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.5"
   }
 }
